# impurity

./: .gitignore  CITATION.cff  Cargo.toml  Makefile  README.md
benches/: bench_main.rs  pfaffian_benchmark.rs
benches/benchmarks/: conjugate_gradient.rs  gutzwiller.rs  jastrow.rs  mod.rs  monte_carlo.rs  pfaffian.rs
data/: orbitale.csv  orbitale.yaml
figs/: conv_markov1.py
macros/src/: lib.rs
notebooks/: CalculInternalProduct.ipynb
src/: constants.rs  density.rs  dvmc.rs  fock_state.rs  green.rs  gutzwiller.rs  hamiltonian.rs  hoppings.rs  jastrow.rs  lib.rs  main.rs  monte_carlo.rs  optimisation.rs  parameters.rs  params.rs  pfaffian.rs  strings.rs
src/old_bin/: dvmc_pairwf.rs
src/parse/: mod.rs  orbitale.rs
tests/: dvmc_clean_updates.rs  parse_orbitale_test.rs  vmc_2sites.rs  vmc_2sites_analytic_conv.rs  vmc_2sites_encore.rs  vmc_2sites_exact_sum.rs  vmc_clean_updates.rs
tests/orbitales_def/: test_csv_parse_error.csv  test_int_parse_error.csv  test_parse_2x2.csv  test_parse_3x3.csv
