[package]
name = "impurity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pfapack = "0.2.0"
csv = "1.2.2"
derive_more = "0.99.16"
bitvec = "1.0.1"

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
