[package]
name = "impurity"
version = "0.1.0"
edition = "2021"

[lib]
name = "impurity"
crate-type = ["cdylib", "lib"]

[dependencies]
log = { version = "0.4.2", features = ["release_max_level_debug"] }
env_logger = "0.11.3"
pfapack = "0.2.0"
csv = "1.2.2"
derive_more = "0.99.16"
num = "0.4.0"
# Wrappers crates
lapack = "0.19.0"
blas = "0.22.0"
intel-mkl-tool = "0.8.1"
# Bindings crates
lapack-sys = "0.14.0"
blas-sys = "0.7.1"
# Source crates
# Intel implementation.
intel-mkl-src = "0.8.1"
# Openblas implementation.
# openblas-src = "0.10.8"
# For python interface
pyo3 = {version = "0.21.2", features = ["extension-module"], optional = true}

[dependencies.rand]
version = "0.8.5"
features = ["small_rng"]

[dev-dependencies]
criterion = "0.5.1"
assert = "0.7.4"

[[bench]]
name = "bench_main"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[features]
default = []
python-interface = ["dep:pyo3"]
verbose = []
